plugins {
    id 'java-library'
    id 'maven-publish'
    id 'idea'
    id 'net.neoforged.moddev' version '2.0.107'
}


version = mod_version
group = mod_group_id

repositories {
    mavenLocal()
    maven {
        name = "RyanHCode Maven"
        url = "https://maven.ryanhcode.dev/releases"
    }
}

base {
    archivesName = mod_id
}

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

neoForge {
    version = project.neo_version
    interfaceInjectionData = project.files('src/main/resources/META-INF/interfaceinjections.json')

    parchment {
        mappingsVersion = project.parchment_mappings_version
        minecraftVersion = project.parchment_minecraft_version
    }

    runs {
        client {
            client()

            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
//            programArgument('--username=Tazer')
            jvmArgument('-Ddevauth.enabled=true')
            jvmArgument('-Ddevauth.account=main')
        }

        server {
            server()
            programArgument '--nogui'
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        gameTestServer {
            type = "gameTestServer"
            systemProperty 'neoforge.enabledGameTestNamespaces', project.mod_id
        }

        data {
            data()

            programArguments.addAll '--mod', project.mod_id, '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }

        configureEach {
            systemProperty 'forge.logging.markers', 'REGISTRIES'

            logLevel = org.slf4j.event.Level.DEBUG
        }
    }

    mods {
        "$mod_id" {
            sourceSet(sourceSets.main)
        }
    }
}

sourceSets.main.resources {
    srcDir 'src/generated/resources'
}

configurations {
    runtimeClasspath.extendsFrom localRuntime
}

repositories {
    mavenCentral()
    exclusiveContent {
        forRepository {
            maven {
                name = "CurseMaven"
                url "https://cursemaven.com"
            }
        }
        filter {
            includeGroup "curse.maven"
        }
    }
    exclusiveContent {
        forRepository {
            maven {
                name = "Modrinth"
                url = "https://api.modrinth.com/maven"
            }
        }
        filter {
            includeGroup "maven.modrinth"
        }
    }
    exclusiveContent {
        forRepository {
            maven {
                name = "Registrate"
                url = "https://mvn.devos.one/snapshots"
            }
        }
        filter {
            includeGroup "com.tterrag.registrate"
        }
    }
    maven {
        name = "Illusive Soulworks maven"
        url = "https://maven.theillusivec4.top/"
    }
    maven {
        name = "RyanHCode Maven"
        url = "https://maven.ryanhcode.dev/releases"
    }
    maven {
        name = "SquidDev Maven"
        url = "https://maven.squiddev.cc"
        content {
            includeGroup("cc.tweaked")
        }
    }
    maven { url = "https://maven.createmod.net" } // Create, Ponder, Flywheel
    maven { url = "https://maven.ithundxr.dev/snapshots" } // Registrate
    maven { url "https://maven.blamejared.com/" }
    maven { url "https://pkgs.dev.azure.com/djtheredstoner/DevAuth/_packaging/public/maven/v1" }
    maven { url 'https://maven.terraformersmc.com/' }
    flatDir { dirs 'libs' }
}

dependencies {
//    implementation("foundry.veil:veil-neoforge-$minecraft_version:$veil_version") {
//        exclude group: "maven.modrinth"
//    }

    implementation "com.terraformersmc:biolith-neoforge:$bt_version"
//    jarJar(implementation("maven.modrinth:mixed-litter:$ml_version"))
    jarJar(implementation("dev.tazer:mixed_litter:1.1.0"))
    jarJar(implementation("com.moulberry:mixinconstraints:1.0.7") {
                exclude group: "org.slf4j",
                        module: "slf4j-api"
    })

    jarJar(api("dev.ryanhcode.sable-companion:sable-companion-common-${project.minecraft_version}:${project.sable_companion_version}")) {
        version {
            prefer project.sable_companion_version
        }
    }

    compileOnly("com.simibubi.create:create-${minecraft_version}:${create_version}:slim") { transitive = false }
    if(project.create_enabled) {
        runtimeOnly("com.simibubi.create:create-${minecraft_version}:${create_version}:slim") { transitive = false }
        runtimeOnly("net.createmod.ponder:ponder-neoforge:${ponder_version}+mc${minecraft_version}")
        runtimeOnly("dev.engine-room.flywheel:flywheel-neoforge-${minecraft_version}:${flywheel_version}")
    }

    if(project.create_simulated_enabled) {
        runtimeOnly("dev.simulated_team.simulated:simulated-neoforge-${minecraft_version}:${simulated_version}")
    }

//MAKE SURE THESE ARE ALL "IMPLEMENTATION" WHEN RUNNING DATA! OTHERWISE DATA WILL BREAK!
    implementation "maven.modrinth:farmers-delight:1.21.1-1.3.0"
    implementation "maven.modrinth:blueprint:8.0.5"
    implementation "maven.modrinth:boatload:6.0.1"
    implementation "maven.modrinth:the-block-box:0.1.1"
    implementation "curse.maven:nirvana-1278909:6970116"
    implementation "com.tterrag.registrate:Registrate:MC1.21-1.3.0+62"
    implementation "maven.modrinth:moonlight:1.21-2.29.18-neoforge"
//    implementation "maven.modrinth:spawn-mod:4.0.4"
    implementation "maven.modrinth:gallery:2.0.0"

    compileOnly "maven.modrinth:every-compat:1.21-2.11.28-neoforge"

    compileOnly "maven.modrinth:scaffolding-drops-nearby:1.21.1-3.4-fabric+forge+neo"
    compileOnly "maven.modrinth:collective:1.21.1-8.3-fabric+forge+neo"
    compileOnly "maven.modrinth:brewin-and-chewin:4.2.0+1.21.1-neoforge"
    compileOnly "maven.modrinth:serene-seasons:SPj5bJoM"
    compileOnly "maven.modrinth:glitchcore:8wmCpbQ2"
    compileOnly "maven.modrinth:supplementaries:1.21-3.5.27-neoforge"
    implementation "maven.modrinth:vanity-core:5.0.2"
    compileOnly "maven.modrinth:snow-real-magic:12.1.2+neoforge"

    compileOnly "mezz.jei:jei-$minecraft_version-common-api:$jei_version"
    compileOnly "mezz.jei:jei-$minecraft_version-neoforge-api:$jei_version"
    localRuntime "mezz.jei:jei-$minecraft_version-neoforge:$jei_version"

//    localRuntime "maven.modrinth:xaeros-world-map:1.38.9_NeoForge_1.21"
    localRuntime "maven.modrinth:appleskin:3.0.5+mc1.21"
    localRuntime "maven.modrinth:worldedit:7.3.6"
    localRuntime "maven.modrinth:sodium:mc1.21.1-0.6.13-neoforge"
    localRuntime "me.djtheredstoner:DevAuth-neoforge:1.2.1"
    //localRuntime "maven.modrinth:cyanide:v4LiMGGH"
}

tasks.withType(ProcessResources).configureEach {
    var replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            neo_version            : neo_version,
            neo_version_range      : neo_version_range,
            loader_version_range   : loader_version_range,
            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_license            : mod_license,
            mod_version            : mod_version,
            mod_authors            : mod_authors,
            mod_description        : mod_description,
            bt_version_range       : bt_version_range,
            ml_version_range       : ml_version_range
    ]

    inputs.properties replaceProperties

    filesMatching(['META-INF/neoforge.mods.toml']) {
        expand replaceProperties
    }
}

publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/repo"
        }
    }
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}